test/parser/error/err_26_read_not_var.pl0
program p; 
const c:=1; 
begin 
read(c) 
end